--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,12 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%; /* Ensure the body spans the entire page height */
-  font-family: Arial, sans-serif;
+  font-family: 'Audiowide', sans-serif;
   background-color: #050505; /* Dark gray background */
   text-align: center; /* Center text */
   color: #ffffff; /* White text for contrast */
 }
+
 
 /* Full-width image below the navbar */
 .header-image {
