--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,21 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
   font-family: 'Audiowide', sans-serif;
   background-color: #050505;
-  text-align: left;
   color: #fff;
 }
 
+/* navbar styling */
+.logo {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 50px;
+  z-index: 1000;
+}
 
-/* Tabs styling */
 .tabs {
   position: fixed;
   top: 0;
@@ -71,50 +78,55 @@ html {
 
 /* Header styling */
 .header-image {
-  position: relative;
+  position: sticky;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 500px;
-  background: url('images/PlaceHolder.png') no-repeat center center/cover;
+  height: 250px;
 }
 
 .header-image::after {
   content: '';
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: linear-gradient(to bottom, #05050500, #050505ff);
-  pointer-events: none;
 }
 
-.logo {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 50px;
-  z-index: 1000;
+/* body styling */
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.header-bubble
+.txt-header-container{
+  display: flex;
+  justify-content: center;
+}
+
+.txt-header-bubble
 {
+  display: inline-block;
   text-align: center;
-}
-
-.header-bubble, .body-bubble {
   border: 2px solid #fff;
   border-radius: 10px;
   padding: 5px 30px;
   margin: 20px 10px;
 }
 
-/* Body styling */
+.body-bubble {
+  border: 2px solid #fff;
+  border-radius: 10px;
+  padding: 5px 30px;
+  margin: 20px 10px;
+}
 
 .body-bubble p {
   font-size: 20px;
+  text-align: left;
 }
 
 /* Footer styling */
