--- a/data/styles.css
+++ b/data/styles.css
@@ -118,6 +118,9 @@ body {
 .body-bubble h2 {
   text-align: center;
 }
+.body-bubble h3 {
+  text-align: center;
+}
 
 .body-bubble p {
   font-size: 20px;
