--- a/data/styles.css
+++ b/data/styles.css
@@ -115,6 +115,7 @@ body {
 =======================*/
 .txt-header-bubble,
 .body-bubble {
+  margin-bottom: 3rem;
   border: 2px solid #fff;
   border-radius: 10px;
   margin: 20px 10px;
